# Sweep

./: .gitignore  README.md  Sweep New Features 0.2.txt  Sweep-Specification.md  sweep_icon.pxd
.github/workflows/: release.yml
autosort/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
autosort-backend/: .gcloudignore  Dockerfile  main.py  requirements.txt
autosort-backend/app/: config.py
autosort-backend/app/api/: auth_routes.py  dependencies.py  routes.py
autosort-backend/app/auth/: tokens.py
autosort-backend/app/gmail/: client.py  push.py
autosort-backend/app/rules/: engine.py  models.py
autosort/src/: App.jsx  index.css  main.jsx
autosort/src-tauri/: Cargo.toml  tauri.conf.json
autosort/src-tauri/capabilities/: default.json
autosort/src-tauri/icons/: icon.icns
autosort/src-tauri/src/: lib.rs  main.rs
autosort/src/components/: EmptyState.jsx  FoldersView.jsx  LoadingSpinner.jsx  MagicFolderSetup.jsx  Navigation.jsx  OnboardingFlow.jsx  RuleEditor.jsx  RuleRow.jsx  RulesList.jsx  SettingsView.jsx  StatsView.jsx  Toast.jsx
autosort/src/constants/: api.js
autosort/src/contexts/: AuthContext.jsx  ThemeContext.jsx  ToastContext.jsx
autosort/src/hooks/: useApi.js  useLocalStorage.js  useRules.js
