[package]
name = "autosort"
version = "0.4.1"
description = "Email sorting automation"
authors = ["You"]
edition = "2021"

[lib]
name = "autosort_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native"] }
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12"
url = "2"
